# vcsql

./: Cargo.toml  README.md  SPEC.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/git/: mod.rs  repository.rs
src/providers/: blame.rs  branches.rs  commit_parents.rs  commits.rs  config.rs  diff_files.rs  diffs.rs  hooks.rs  mod.rs  notes.rs  reflog.rs  refs.rs  remotes.rs  stashes.rs  status.rs  submodules.rs  tags.rs  worktrees.rs
src/sql/: engine.rs  mod.rs  schema.rs
