[package]
name = "vcsql"
version = "0.1.0"
edition = "2021"
description = "SQL query engine for Git repository data"
license = "MIT"
repository = "https://github.com/douglance/vcsql"
keywords = ["git", "sql", "cli", "query"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Git access - libgit2 bindings (has stash, reflog, blame)
git2 = "0.18"

# SQL engine - full SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Table output
tabled = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Regex for query parsing
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "vcsql"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
